--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,117 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    tools:context="com.example.rakesh.profileview.MainActivity">
+    tools:context="com.example.rakesh.profileview.MainActivity"
+    android:background="@mipmap/wall"
+    android:padding="10sp">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/MainLayout"
-        android:layout_width="220dp"
-        android:layout_height="320dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_alignParentTop="true"
+                    android:id="@+id/MainLayout"
+                    android:weightSum="10">
+
+                    <RelativeLayout
+                        android:layout_width="0sp"
+                        android:layout_weight="6.5"
+                        android:layout_marginRight="10sp"
+                        android:layout_height="220sp"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/MainImage"
+                            android:src="@drawable/mainimg1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"/>
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:background="@color/blur_grey"
+                            android:id="@+id/Starred"
+                            android:src="@drawable/star"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentTop="true"/>
+
+                        <ImageView
+                            android:padding="2sp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:id="@+id/Sigil"
+                            android:src="@drawable/sigil"
+                            android:background="@color/blur_grey"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentBottom="true"/>
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="0sp"
+                        android:layout_weight="3.5"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/SideImage1"
+                            android:scaleType="centerCrop"
+                            android:layout_width="match_parent"
+                            android:src="@drawable/sideimg1"
+                            android:layout_height="110dp"
+                            android:layout_marginBottom="5sp"/>
 
 
-        <ImageView
-            android:id="@+id/MainImage"
-            android:src="@drawable/mainimg1"
-            android:layout_width="220dp"
-            android:layout_height="320dp" />
+                        <ImageView
+                            android:scaleType="centerCrop"
+                            android:id="@+id/SideImage2"
+                            android:layout_width="match_parent"
+                            android:src="@drawable/sideimg2"
+                            android:layout_height="110dp"/>
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/Starred"
-            android:src="@drawable/star"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"/>
+                    </LinearLayout>
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:id="@+id/Sigil"
-            android:src="@drawable/sigil"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"/>
-
-    </RelativeLayout>
-    
-    <ImageView
-        android:layout_marginTop="30dp"
-        android:id="@+id/SideImage1"
-        android:layout_marginLeft="20dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/MainLayout"
-        android:layout_width="100dp"
-        android:src="@drawable/mainimg1"
-        android:layout_height="120dp"
-        android:layout_marginBottom="40dp"/>
+                </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/SideImage2"
-        android:layout_marginLeft="20dp"
-        android:layout_below="@id/SideImage1"
-        android:layout_toRightOf="@id/MainLayout"
-        android:layout_width="100dp"
-        android:src="@drawable/mainimg1"
-        android:layout_height="120dp" />
-    
-    <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="10dp"
-        android:id="@+id/BottomImagesLayout"
-        android:layout_below="@id/MainLayout">
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:id="@+id/BottomImagesLayout"
+                    android:layout_below="@id/MainLayout">
 
-        <ImageView
-            android:src="@drawable/mainimg1"
-            android:id="@+id/mainimg1"
-            android:layout_width="80dp"
-            android:layout_height="80dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-        <ImageView
-            android:src="@drawable/mainimg1"
-            android:id="@+id/BottomImage2"
-            android:layout_marginLeft="30dp"
-            android:layout_width="80dp"
-            android:layout_height="80dp" />
+                        <ImageView
+                            android:layout_width="30sp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/arrow_back"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:id="@+id/BuyMoreButton"
-            android:layout_height="wrap_content"
-            android:text="BUY MORE"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="end|center_vertical"/>
+                        <ImageView
+                            android:src="@drawable/sideimg1"
+                            android:id="@+id/BottomImage1"
+                            android:layout_width="110sp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5sp"
+                            android:scaleType="centerCrop"/>
 
-    </LinearLayout>
+                        <ImageView
+                            android:src="@drawable/mainimg1"
+                            android:id="@+id/BottomImage2"
+                            android:layout_width="110sp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5sp"
+                            android:scaleType="centerCrop"/>
+
+                        <ImageView
+                            android:src="@drawable/sideimg2"
+                            android:id="@+id/BottomImage3"
+                            android:layout_width="110sp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5sp"
+                            android:scaleType="centerCrop"/>
+
+                        <ImageView
+                            android:src="@drawable/mainimg1"
+                            android:id="@+id/BottomImage4"
+                            android:layout_width="110sp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="5sp"
+                            android:scaleType="centerCrop"/>
+
+                        <Button
+                            android:layout_width="100sp"
+                            android:id="@+id/BuyMoreButton"
+                            android:layout_height="match_parent"
+                            android:text="BUY MORE"
+                            android:background="#60000000"
+                            android:layout_gravity="center"
+                            android:layout_margin="5sp"
+                            android:scaleType="centerCrop"/>
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
 
 
-        <VideoView
-            android:id="@+id/Video"
-            android:layout_margin="20dp"
-            android:layout_width="100dp"
-            android:layout_height="85dp"
-            android:layout_below="@id/BottomImagesLayout"/>
+                <RelativeLayout
+                    android:layout_width="130sp"
+                    android:layout_height="150sp"
+                    android:layout_margin="10dp"
+                    android:layout_below="@id/BottomImagesLayout">
+
+                    <VideoView
+                        android:id="@+id/Video"
+                        android:layout_width="130dp"
+                        android:layout_height="150dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="INSERT VIDEO FOR PROFILE HERE"/>
+
+                </RelativeLayout>
 
 
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="85dp"
-            android:layout_alignTop="@+id/Video"
-            android:layout_toRightOf="@+id/Video"
-            android:layout_toEndOf="@+id/Video"
-            android:text="DETAILS"
-            android:gravity="center"
-            android:scrollbars="vertical"/>
 
-    </RelativeLayout>
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="85dp"
+                    android:layout_below="@id/BottomImagesLayout"
+                    android:layout_alignParentRight="true"
+                    android:text="APPEND DETAILS FROM API HERE"
+                    android:padding="10sp"
+                    android:gravity="center"
+                    android:scrollbars="vertical"/>
 
-</ScrollView>
+            </RelativeLayout>
+
+    </ScrollView>
+
+
+</RelativeLayout>
